test/typecheck/y_error_19.j.gold
test/y_error_19.j:12:1: error: class cannot be named 'String'
    |
 12 |     class STRING
    |     ^
