test/typecheck/y_error_19.j
class UWU
{
	Void main()
	{
		Int a;
		Bool b;

		new A().x = "69";
	}
}

class STRING
{
	String x;
}

class A { String x; }
